--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack --progress --config webpack.config.js --colors",
-    "start": "nodemon src/app.js --exec \"npm run lint && node\"",
     "lint": "./node_modules/.bin/eslint **/*.js"
   },
   "repository": {
@@ -26,6 +25,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-latest": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
@@ -33,8 +33,10 @@
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.1.0",
-    "nodemon": "^1.17.3",
+    "image-webpack-loader": "^4.2.0",
+    "postcss-loader": "^2.1.4",
     "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
     "vue-loader": "^15.0.4",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.15",
