--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.1.0",
+    "file-loader": "^1.1.11",
     "image-webpack-loader": "^4.2.0",
     "postcss-loader": "^2.1.4",
     "style-loader": "^0.21.0",
