--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --progress --config webpack.config.js --colors",
-    "lint": "./node_modules/.bin/eslint **/*.js"
+    "build": "cross-env NODE_ENV=production webpack --progress --config webpack.config.js --colors",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --progress --config webpack.config.js --colors",
+    "lint": "./node_modules/.bin/eslint --ext .js,.vue src test/unit test/e2e/specs --color"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
     "babel-loader": "^7.1.4",
     "babel-preset-latest": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
+    "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
@@ -34,6 +36,7 @@
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.1.0",
     "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.2.0",
     "postcss-loader": "^2.1.4",
     "style-loader": "^0.21.0",
