--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.4",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-latest": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
@@ -43,6 +47,7 @@
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^2.1.4",
     "style-loader": "^0.21.0",
+    "stylus-loader": "^3.0.2",
     "url-loader": "^1.0.1",
     "vue-loader": "^15.0.4",
     "vue-style-loader": "^4.1.0",
