--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^2.1.4",
     "style-loader": "^0.21.0",
+    "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "url-loader": "^1.0.1",
     "vue-loader": "^15.0.4",
