--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.15",
     "webpack-dev-server": "^3.1.3",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^1.7.2",
+    "webpack-split-chunks": "^0.2.1"
   }
 }
